--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
 <html>
+
+<head lang="en">
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+
+<body>
+    <input type="button" value="設置" id="btn"><br />
+    <input type="text" value="" /><br />
+    <input type="text" value="" /><br />
+    <input type="text" value="" /><br />
+    <input type="text" value="" /><br />
+    <input type="text" value="" /><br />
+    <input type="text" value="" /><br />
+    <input type="text" value="" /><br />
+    <input type="text" value="" /><br />
+    <input type="text" value="" /><br />
+    <script>
+        document.getElementById('btn').onclick = function () {
+            var ipObj = document.getElementsByTagName('input');
+            for (var i = 0; i < ipObj.length; i++) {
+                console.log("OK");
+                if (ipObj[i].type != 'button') {
+                    ipObj[i].value = "嘎嘎";
+
+                }
+            }
+        }
+    </script>
+</body>
+
+</html>
